# aoctty

./: .gitignore  2023_01.py  2023_02.py  2023_03.py  2023_04.py  2023_05.py  2023_06.py  2023_07.py  2023_07_sample.txt  2023_08.py  2023_09.py  2023_10.py  LICENSE  README.md  pyproject.toml
aoctty/: __init__.py  read_puzzle.py
aoctty/utils/: __init__.py  read_puzzle.py
aoctty/year2022/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py
tests/: test_2022.py  test_read_puzzle.py  test_utils.py
