[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
[project]
name = "aoctty"
version = "0.0.1"
authors = [
    { name="Justin Alexander", email="justin@justinalexander.us" },
]
description = "A package for solving Advent of Code puzzle from multiple years"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
